--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jvectormap-next": "^3.1.1",
     "jwt-decode": "^4.0.0",
     "ng2-pdf-viewer": "^10.2.2",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^15.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
