--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,32 @@
               "node_modules/fastclick/lib/fastclick.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/jquery/dist/jquery.slim.min.js",
-             "node_modules/bootstrap/dist/js/bootstrap.min.js"
+             "node_modules/bootstrap/dist/js/bootstrap.min.js",
+             "src/assets/squelettes/js/nav-menu.js",
+             "src/assets/squelettes/js/popper.min.js",
+             "src/assets/squelettes/js/owl.carousel.js",
+             "src/assets/squelettes/js/owl.carousel.thumbs.js",
+             "src/assets/squelettes/js/easy.responsive.tabs.js",
+             "src/assets/squelettes/js/jquery.counterup.min.js",
+             "src/assets/squelettes/js/jquery.stellar.min.js",
+             "src/assets/squelettes/js/waypoints.min.js",
+             "src/assets/squelettes/js/countdown.js",
+             "src/assets/squelettes/js/jquery.magnific-popup.min.js",
+             "src/assets/squelettes/js/lightgallery-all.js",
+             "src/assets/squelettes/js/jquery.mousewheel.min.js",
+             "src/assets/squelettes/js/isotope.pkgd.min.js",
+             "src/assets/squelettes/js/animated-headline.js",
+             "src/assets/squelettes/js/wow.js",
+             "src/assets/squelettes/js/jquery.lettering.js",
+             "src/assets/squelettes/js/jquery.textillate.js",
+             "src/assets/squelettes/js/tilt.js",
+             "src/assets/squelettes/js/clipboard.min.js",
+             "src/assets/squelettes/js/prism.js",
+             "src/assets/squelettes/js/main.js",
+             "src/assets/squelettes/quform/js/plugins.js",
+             "src/assets/squelettes/quform/js/scripts.js"
+
+
 
               
             ]
